almost all features are done

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
 @import url('./phosphor-icons.css');
 
 :root {
-  /* --background-color: #f5f5f5; */
+  --background-color: #f5f5f5;
   
   --primary-color: #8b5cf6;
   --secondary-color: #d1d5db;
@@ -59,10 +59,11 @@ body {
 
   width: 50rem;
   height: 100%;
-
+  
+  background-color: var(--background-color);
+  
   padding-top: 6rem;
 
-  background-color: var(--background-color);
 }
 
 .login-container > * {
@@ -83,34 +84,46 @@ body {
 }
 
 .decorative-img {
+  --mouse-pos-x: 0%;
+  --mouse-pos-y: 0;
+
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   flex-shrink: 1;
-  height: 100%;
-  
+  height: 100%;  
   width: calc(100% - 50rem);
 
-  background-image: url('../../public/images/abstract-background.png');
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-color: var(--background-color);
+
+  overflow: hidden;
+}
+
+.decorative-img:hover > * {
+  transform: translate(var(--mouse-pos-x), var(--mouse-pos-y));
+}
+
+.mesh {
+  width: 115%;
+  height: 115%;
+
+  --gradient-color-1: #c3e4ff; 
+  --gradient-color-2: #a78bfa; 
+  --gradient-color-3: #eae2ff;  
+  --gradient-color-4: #b9beff;
+
+  transition: all 300ms cubic-bezier(0.215, 0.610, 0.355, 1);
 }
 
 @media (max-width: 768px) {
   body {
     justify-content: center;
   }
-  
-  .login-container form button {
-    width: 80%;
-  }
 
   .decorative-img {
     display: none;
-  }
-}
-
-@media (max-width: 425px) {
-  .login-container form button {
-    width: 74%;
   }
 }
 
