--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -38,6 +38,11 @@
   overflow: hidden;
 }
 
+.login-container img {
+  width: 4.8rem;
+  height: 4.8rem;
+}
+
 .login-container h1 {
   font-size: var(--font-size-lg);
   font-weight: 700;
@@ -48,11 +53,6 @@
   font-size: var(--font-size-md);
   font-weight: 400;
   color: var(--font-secondary);
-}
-
-.login-container img {
-  width: 100%;
-  height: 100%;
 }
 
 .login-container form {
@@ -124,7 +124,7 @@
 .with-picture input::placeholder {
   position: absolute;
   top: 50%;
-  transform: translateY(-36%);
+  transform: translateY(-26%);
 }
 
 .input-wrapper label {
@@ -174,8 +174,13 @@
   opacity: 0;
 }
 
-.login-container form button {
-  width: 82%;
+.submit-btn-wrapper {
+  width: 100%;
+  padding-inline: 4.8rem;
+}
+
+.submit-btn-wrapper button {
+  width: 100%;
 
   border: none;
   border-radius: 0.8rem;
