--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -127,6 +127,12 @@ body {
   }
 }
 
+@media (max-width: 316px) {
+  .password-content .special-link:is(a) {
+    text-align: end;
+  }
+}
+
 @media (min-width: 2000px) {
   body {
     grid-template-columns: 90rem 1fr;
