--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -119,6 +119,12 @@
   color: var(--font-secondary);
 }
 
+.with-picture input::placeholder {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-26%);
+}
+
 .input-wrapper label {
   font-size: var(--font-size-md);
   font-weight: 700;
