--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -129,6 +129,10 @@ body {
   .with-picture input::placeholder {
     position: initial;
   }
+
+  .with-picture input {
+    width: 89%;
+  }
 }
 
 @media (max-width: 316px) {
