--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -135,6 +135,7 @@ body {
   .with-picture input::placeholder {
     position: absolute;
     top: 50%;
+    transform: translateY(-0.2%);
   }
 }
 
